--- a/api_tosend/.env
+++ b/api_tosend/.env
@@ -1,3 +1,3 @@
 HTTPS_proxy="Put your proxy information here"
-HTTPS_hadoop="Put your hadoop path here"
+HADOOP_HOME="Put your proxy information here"
 DATA_PATH="Put your data directory path here"
