--- a/api_tosend/.env
+++ b/api_tosend/.env
@@ -1,3 +1,3 @@
 HTTPS_proxy="Put your proxy information here"
 HADOOP_HOME="Put your proxy information here"
-DATA_PATH="Put your data directory path here"
+DATA_PATH="Put your current path where you run epitweetr.(ideally, the path of `api_tosend` folder) Epitweetr data will be collected here"
