--- a/env.yml
+++ b/env.yml
@@ -9,5 +9,13 @@ dependencies:
  - r-epitweetr
  - r-dotenv
  - r-plumber
+ - r-vscDebugger
+ - r-plumber
+ - r-rgdal
+ - r-jsonlite
+ - r-sp
+ - r-ggplot2
+ - r-dplyr
+ - r-mapview
  - pip:
   - python-dotenv==0.20.0
